<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java 2</string>
    <!-- Header text for the list of toppings [CHAR LIMIT=20] -->
    <string name="Price">Order Summary</string>
    <string name="toppings">Toppings</string>
    <string name="startOrder" translatable="false">2</string>
    <string name="startPrice" translatable="false">$ 10</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>

    <!--Thank you message for the order summary file [CHAT LIMIT = NONE]-->
    <string name="thank_you">Thank you!</string>
    <!--
    Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the user´s name
    [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name" translatable="false">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <!-- Add whipped cream? message for the order summary file [CHAR LIMIT = NONE] -->
    <string name="addWhippedCream">Add whipped cream? = </string>
    <!-- Add Chocolate? message for the order summary file [CHAR LIMIT = NONE] -->
    <string name="addChocolate">Add Chocolate?</string>
    <!-- Total message for the order summary file [CHAR LIMIT = NONE] -->
    <string name="total">Total =$</string>
    <!-- quantity message for the order summary file [CHAR LIMIT = NONE] -->
    <string name="Quantity">Quantity = </string>
</resources>
